# deep-learning-with-python

./: .gitignore  README.org  pyproject.toml  requirements.txt
book/ch2/: ch2.py  mnist_ex.py  notebook.ipynb  tensors.py  tf_from_scratch.py
book/ch3/: linear_separable_example.py
book/soundcheck/: packages.py
