[tool.poetry]
name = "deep-learning-with-python"
version = "0.1.0"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"
packages = [{include = "book"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-lsp-server = "^1.7.3"
tensorflow = "^2.12.0"
keras = "^2.12.0"
tensorboard = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
