[tool.poetry]
name = "deep-learning-with-python"
version = "0.1.0"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"
packages = [{include = "book"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-lsp-server = "^1.7.3"
tensorflow-macos = ">=2.12,<2.13"
keras = "^2.12.0"
tensorboard = ">=2.12.0,<2.13"
jupyterlab = "^4.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
tensorflow-metal = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
